manifests/phase6/trino-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-forwarded
  namespace: it
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Forwarded-Host: ""
      X-Forwarded-Proto: ""
